--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "bignumber.js": "^9.0.1",
+    "web3": "^1.3.3"
   }
 }
