--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -56,6 +55,7 @@
     "bignumber.js": "^9.0.1",
     "ethereumjs-common": "^1.5.2",
     "ethereumjs-tx": "^2.1.2",
+    "ethers": "^5.1.0",
     "web3": "^1.3.3"
   }
 }
