--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.9.1",
+    "dotenv": "^10.0.0",
     "husky": "^4.3.8",
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
@@ -50,9 +51,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "ethereumjs-common": "^1.5.2",
-    "ethereumjs-tx": "^2.1.2",
-    "ethers": "^5.1.0",
     "web3": "^1.3.3"
   }
 }
