--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.4-beta.0",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -19,6 +19,7 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
+  "peerDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -32,30 +33,32 @@
   },
   "name": "@xend-finance/web-sdk",
   "keywords": [
-    "web3"
+    "web3",
+    "xend"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/xendfinance/XendFinanceSDK"
+    "url": "https://github.com/xendfinance/web-sdk.git"
   },
+  "module": "dist/xend.esm.js",
   "size-limit": [
     {
-      "path": "dist/xendfinance-sdk.cjs.production.min.js",
+      "path": "dist/xend.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/xendfinance-sdk.esm.js",
+      "path": "dist/send.esm.js",
       "limit": "10 KB"
     }
   ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^4.9.1",
+    "@size-limit/preset-small-lib": "^5.0.3",
     "dotenv": "^10.0.0",
-    "husky": "^4.3.8",
-    "size-limit": "^4.9.1",
+    "husky": "^7.0.1",
+    "size-limit": "^5.0.3",
     "tsdx": "^0.14.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "axios": "^0.21.1",
